--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <img src="img/Logo.png" alt="logo">
         <h1>Toboolist</h1>
     </header>
+    <main>
+        <div class="container">
+            <div class="add">
+                <button class="add-task">Add Task</button>
+                <button class="add-section">Add Section</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
