creato classe list, tag, check e cross

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
                 <button class="add-task">Add Task</button>
                 <button class="add-section">Add Section</button>
             </div>
+            <div class="list">
+                <div class="list-task">
+                    <h3>&#9660; New Task</h3>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Quarterly Newsletter
+                        <span class="tag tag-blue">Editorial</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
