aggiunto restanti liste + modifica della lista

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     </header>
     <main>
         <div class="container">
+            <!-- button -->
             <div class="add">
                 <button class="add-task">Add Task</button>
                 <button class="add-section">Add Section</button>
             </div>
+            <!-- /button -->
             <div class="list">
+                <!-- lista 1 -->
                 <div class="list-task">
                     <h3>&#9660; New Task</h3>
                     <div class="task">
@@ -30,6 +33,56 @@
                         <span class="tag tag-blue">Editorial</span>
                     </div>
                 </div>
+                <!-- /lista 1 -->
+                <!-- lista 2 -->
+                <div class="list-task">
+                    <h3>&#9660; Today</h3>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Recruiting blog post
+                        <span class="tag tag-blue">Editorial</span>
+                    </div>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Mobile app launch
+                        <span class="tag tag-violet">Q1 Goals</span>
+                    </div>
+                    <div class="task">
+                        <span class="cross">&cross;</span>
+                        Interview John H.
+                        <span class="tag tag-green">Recruiting</span>
+                    </div>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Summit update to mobile storefronts
+                        <span class="tag tag-orange">Mobile</span>
+                    </div>
+                </div>
+                <!-- /lista 2 -->
+                <!-- lista 3 -->
+                <div class="list-task">
+                    <h3>&#9660; Upcoming</h3>
+                    <div class="task">
+                        <span class="cross">&cross;</span>
+                        Schedule meeting with Alex
+                    </div>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Homepage refresh
+                        <span class="tag tag-rose">Website</span>
+                    </div>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Onboard new Sales team members
+                        <span class="tag tag-lightgreen">Sales</span>
+                    </div>
+                    <div class="task">
+                        <span class="check">&check;</span>
+                        Review editorial calendar
+                        <span class="tag tag-blue">Editorial</span>
+                    </div>
+                </div>
+                <!-- /lista 3 -->
             </div>
         </div>
     </main>
